# Zerch-pvt

./: .gitattributes  .gitignore  Cargo.toml  README.md  docker-compose.yml  sample.txt  setup.sh
.github/workflows/: ci.yaml
crates/zerch-api/src/: main.rs
crates/zerch-core/: Cargo.toml
crates/zerch-embed/: Cargo.toml
crates/zerch-engine/: Cargo.toml
crates/zerch-mcp-server/: Cargo.toml
crates/zerch-mcp-server/src/: config.rs  main.rs  server.rs  tools.rs  transports.rs
crates/zerch-storage/: Cargo.toml
ui/: Dockerfile  package-lock.json
ui/src/: App.css  App.jsx  index.css
ui/src/components/: IncidentDetails.css  IncidentDetails.jsx  LogPanel.css  LogPanel.jsx  RightPanel.css  RightPanel.jsx  SearchPanel.css  SearchPanel.jsx  SearchResultsPanel.css  SearchResultsPanel.jsx  Topbar.css  Topbar.jsx  UploadSection.css  UploadSection.jsx
ui/src/config/: api.js
ui/src/data/: mockData.js
ui/src/hooks/: useLogs.js
ui/src/pages/: DashboardPage.jsx  LandingPage.jsx  McpPage.css  McpPage.jsx
