[package]
name = "zerch-mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "sync"] }
axum = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

zerch-core = { path = "../zerch-core" }
zerch-embed = { path = "../zerch-embed" }
zerch-storage = { path = "../zerch-storage" }
